fix alignment

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -22,17 +22,19 @@
 
 .about-page {
     //position: relative;
+
+    // display: flex;
+    // flex-direction: row;
     .timeline {
         position: absolute;
-        top: 30%;
+        top: 25%;
         left: 60%;
     }
 
     .text-zone { 
         position: absolute;
         left: 10%;
-        top: 40%;
-        transform: translateY(-50%);
+        top: 25%;
         width: 35%;
         vertical-align: middle;
         display: table-cell;
